Fix alignment and fg icon
Fix: fg image alignment on non-webkit browsers.
Fix: fg image not found icon.
Change: acknowledge bg image transition problem on Chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -112,13 +112,16 @@ img.centered {
    left: 50%;
    top: 50%;
    -webkit-transform: translateY(-50%) translateX(-50%);
+   -moz-transform: translateY(-50%) translateX(-50%);
+   -o-transform: translateY(-50%) translateX(-50%);
+   transform: translateY(-50%) translateX(-50%);
 }
 
 .fadein, .fadeout, a, p, input[type=button] {
-    -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .fadein.ng-hide-remove, .fadeout.ng-hide-add.ng-hide-add-active {
